fixes: worked on tablet and mobile screen

--- a/style.css
+++ b/style.css
@@ -86,16 +86,23 @@ border: none;
 }
 
     /* header-hero */
+
+    .header-section-1 {
+        height: 70vh;
+    }
     .header-section-1 h2 {
-text-align: center;
+        font-size: 50px;
+text-align: start;
 }
 
 .header-section-1 p{
-text-align: center;
+text-align: start;
+width: 100%;
+font-size: 20px;
 }
 
 .header-section-1 button{
-margin-left: 16rem;
+min-width: 100%;
 }
 }
 
@@ -110,17 +117,22 @@ margin-left: 16rem;
 }
 
     /* header-hero */
+
+        .header-section-1 {
+        height: 70vh;
+    }
+
     .header-section-1 h2 {
         font-size: 35px;
-text-align: center;
+text-align: start;
 }
 
 .header-section-1 p{
-text-align: center;
+text-align: start;
 width: 100%;
 }
 
 .header-section-1 button{
-margin-left: 8rem;
+min-width: 100%;
 }
 }
